--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/themes": "^3.2.1",
     "gsap": "^3.12.7",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
